Refactored all Java examples to use "Demo" prefix in class names for improved clarity and distinction among abstract classes, interfaces, and implementations.